# steam_crawler

./: .gitignore  Cargo.toml  README.md
data/: dataStats.ipynb  extraInfo.txt
src/: main.rs
