[package]
name = "steam_crawler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.23", features = ["json"] }
tokio = { version = "1.12.0", features = ["full"] }
futures = "0.3.30"
scraper = "0.18.1"
serde_json = "1.0.111"
serde = { version = "1.0.195", features = ["derive"] }
rusqlite = { version = "0.30.0", features = ["bundled","serde_json"] }
dotenv = "0.15.0"
